Updated swagger.json and improved on responses from endpoints for more simplicity
